<resources>
    <string name="app_name">Course Match Daddy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="program_header">Selected Programs</string>
    <string name="program_selection">Please select a program to display its information here.</string>
    <string name="template_program_title">(Program Title)</string>
    <string name="template_program_code">(Program Code)</string>
    <string name="template_program_description">(Program Description)</string>
    <string name="course_header">Selected Courses</string>
    <string name="course_selection">Please select a course to display its information here.</string>
    <string name="template_course_title">(Course Title)</string>
    <string name="template_course_code">(Course Code)</string>
    <string name="template_course_description">(Course Description)</string>
    <string name="carousel_header">Recommendations</string>
    <string name="course_title">Course Title</string>
</resources>