<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy_blue"
    android:orientation="vertical">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="407dp"
        android:layout_height="61dp"
        android:text="Selected Courses"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="379dp"
        android:layout_height="260dp"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:background="@color/navy_blue"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recyclerView"
        android:layout_marginTop="16dp"
        android:background="@color/dark_red"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_selection"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/course_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/template_course_title"
            android:textAlignment="center"
            android:textColor="@color/teal_200"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/course_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/template_course_code"
            android:textAlignment="center"
            android:textColor="@color/teal_200"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/course_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/template_course_description"
            android:textAlignment="center"
            android:textColor="@color/teal_200"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/buttonCarousel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="Back to Carousel" />
=======
        android:layout_marginBottom="16dp"
        android:text="to Carousel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonProgram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="to Programs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />
>>>>>>> main

        <Button
            android:id="@+id/buttonProgram"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="Go to Program Page" />
    </LinearLayout>
</RelativeLayout>
</LinearLayout>